Guard against source file not being set.
Closes #2362